# ray-tracing-iow-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  readme.txt  scene.txt  scene_tutorial.txt
informe/: caratula.sty  caratula.tex  conclusion.tex  estructuras.tex  introduccion.tex  main.tex  objetos.tex
src/: Camera.h  KDTree.cpp  KDTree.h  Ray.h  Scene.cpp  Scene.h  Vec3.cpp  Vec3.h  color.h  main.cpp  rtweekend.h
src/hittable/: Box.cpp  Box.h  HittableList.cpp  HittableList.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h  hittable.h
src/materials/: Material.h
